Tweak background for Creators Update

--- a/MyerSplash/View/Uc/DownloadsListControl.xaml
+++ b/MyerSplash/View/Uc/DownloadsListControl.xaml
@@ -22,7 +22,7 @@
     </UserControl.Background>
     <Grid
         x:Name="RootGrid"
-        cu:Background="{StaticResource AppBackgroundBrush}"
+        cu:Background="{StaticResource AppBackgroundBrushDark}"
         fcu:Background="{StaticResource CustomAcrylicInAppBrush}">
         <Grid.RowDefinitions>
             <RowDefinition Height="60" />
