Support live title of today highlight

--- a/MyerSplash/View/Uc/ImageListControl.xaml
+++ b/MyerSplash/View/Uc/ImageListControl.xaml
@@ -62,7 +62,7 @@
                     <Border Background="{x:Bind BackColorBrush, Mode=OneWay}" Opacity="0.3" />
                     <Image
                         x:Name="Img"
-                        Source="{x:Bind ListImageBitmap.Bitmap, Mode=OneWay}"
+                        Source="{x:Bind BitmapSource.Bitmap, Mode=OneWay}"
                         Stretch="UniformToFill" />
                     <Grid x:Name="MaskBorder" Background="#53000000">
                         <StackPanel
