--- a/MyerSplash/ResourceDictionary/DimentionDictionary.xaml
+++ b/MyerSplash/ResourceDictionary/DimentionDictionary.xaml
@@ -17,4 +17,5 @@
     <Thickness x:Key="RevealThinkness">0.7</Thickness>
     <Thickness x:Key="SettingsButtonMargin">8</Thickness>
     <x:Double x:Key="DialogWidth">400</x:Double>
+    <x:Double x:Key="SettingsSwitchItemHeight">48</x:Double>
 </ResourceDictionary>
