--- a/MyerSplash/View/Uc/DownloadItemTemplate.xaml
+++ b/MyerSplash/View/Uc/DownloadItemTemplate.xaml
@@ -40,7 +40,7 @@
             Grid.RowSpan="2"
             PointerEntered="Img_PointerEntered"
             PointerExited="Img_PointerExited"
-            Source="{Binding ImageItem.ListImageBitmap.Bitmap, Mode=OneWay}"
+            Source="{Binding ImageItem.BitmapSource.Bitmap, Mode=OneWay}"
             Stretch="UniformToFill" />
         <TextBlock
             Margin="12,0,0,12"
