--- a/MyerSplash/View/Page/MainPage.xaml
+++ b/MyerSplash/View/Page/MainPage.xaml
@@ -12,6 +12,7 @@
     xmlns:fcu="http://schemas.microsoft.com/winfx/2006/xaml/presentation?IsApiContractPresent(Windows.Foundation.UniversalApiContract,5)"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:uc="using:MyerSplash.View.Uc"
+    DataContext="{Binding MainVM, Source={StaticResource Locator}}"
     Background="{StaticResource TitleBarDarkBrush}"
     mc:Ignorable="d">
     <Interactivity:Interaction.Behaviors>
