Add compact mode settings hint

--- a/MyerSplash/ResourceDictionary/StyleDictionary.xaml
+++ b/MyerSplash/ResourceDictionary/StyleDictionary.xaml
@@ -5,6 +5,25 @@
     <FontFamily x:Key="PhoneFontFamilyNormal">Segoe WP</FontFamily>
     <FontWeight x:Key="PhoneButtonFontWeight">Semibold</FontWeight>
     <SolidColorBrush x:Key="ButtonDisabledBackgroundThemeBrush" Color="Transparent" />
+    <Style x:Key="SettingItemButtonContentStyle" TargetType="TextBlock">
+        <Setter Property="Margin" Value="{StaticResource SettingsButtonMargin}" />
+        <Setter Property="HorizontalAlignment" Value="Left"/>
+        <Setter Property="Foreground" Value="White" />
+        <Setter Property="FontSize" Value="14"/>
+    </Style>
+    <Style x:Key="SettingItemTextBlockStyle" TargetType="TextBlock">
+        <Setter Property="Margin" Value="12,12,0,0" />
+        <Setter Property="Foreground" Value="White" />
+        <Setter Property="FontSize" Value="14"/>
+    </Style>
+    <Style x:Key="SettingItemComboBoxStyle" TargetType="ComboBox">
+        <Setter Property="Margin" Value="12,12,12,0" />
+        <Setter Property="FontSize" Value="12"/>
+        <Setter Property="Foreground" Value="White" />
+        <Setter Property="BorderThickness" Value="1" />
+        <Setter Property="RequestedTheme" Value="Dark" />
+        <Setter Property="HorizontalAlignment" Value="Stretch" />
+    </Style>
     <Style x:Key="MainPageTitleStyle" TargetType="TextBlock">
         <Setter Property="HorizontalAlignment" Value="Center" />
         <Setter Property="VerticalAlignment" Value="Center" />
