--- a/MyerSplash/App.xaml
+++ b/MyerSplash/App.xaml
@@ -17,7 +17,7 @@
             </ResourceDictionary.MergedDictionaries>
             <vm:ViewModelLocator x:Key="Locator" />
             <common:AppSettings x:Key="AppSettings" />
-            <x:String x:Key="CoachKey">TIPS_TELEGRAM_BOT</x:String>
+            <x:String x:Key="CoachKey">TIPS_COMPACT_MODE</x:String>
         </ResourceDictionary>
     </Application.Resources>
 </Application>
