--- a/MyerSplash/View/Uc/SettingsControl.xaml
+++ b/MyerSplash/View/Uc/SettingsControl.xaml
@@ -11,27 +11,6 @@
     d:DesignHeight="700"
     d:DesignWidth="700"
     mc:Ignorable="d">
-    <UserControl.Resources>
-        <Style x:Key="SettingItemButtonContentStyle" TargetType="TextBlock">
-            <Setter Property="Margin" Value="{StaticResource SettingsButtonMargin}" />
-            <Setter Property="HorizontalAlignment" Value="Left"/>
-            <Setter Property="Foreground" Value="White" />
-            <Setter Property="FontSize" Value="14"/>
-        </Style>
-        <Style x:Key="SettingItemTextBlockStyle" TargetType="TextBlock">
-            <Setter Property="Margin" Value="12,12,0,0" />
-            <Setter Property="Foreground" Value="White" />
-            <Setter Property="FontSize" Value="14"/>
-        </Style>
-        <Style x:Key="SettingItemComboBoxStyle" TargetType="ComboBox">
-            <Setter Property="Margin" Value="12,12,12,0" />
-            <Setter Property="FontSize" Value="12"/>
-            <Setter Property="Foreground" Value="White" />
-            <Setter Property="BorderThickness" Value="1" />
-            <Setter Property="RequestedTheme" Value="Dark" />
-            <Setter Property="HorizontalAlignment" Value="Stretch" />
-        </Style>
-    </UserControl.Resources>
     <Grid
         cu:Background="{StaticResource AppBackgroundBrushDark}"
         fcu:Background="{StaticResource CustomAcrylicInAppBrush}"
@@ -114,10 +93,10 @@
                             Margin="12,0,0,0"
                             VerticalAlignment="Center"
                             Style="{StaticResource SettingItemButtonContentStyle}"
-                            Text="Compact mode" />
+                            Text="Today highlight" />
                         <ToggleSwitch
                             Grid.Column="1"
-                            IsOn="{Binding Source={StaticResource AppSettings}, Path=EnableCompactMode, Mode=TwoWay}"
+                            IsOn="{Binding Source={StaticResource AppSettings}, Path=EnableTodayRecommendation, Mode=TwoWay}"
                             Style="{StaticResource ToggleSwitchStyle}" />
                     </Grid>
                     <Grid Height="{StaticResource SettingsSwitchItemHeight}">
@@ -129,11 +108,31 @@
                             Margin="12,0,0,0"
                             VerticalAlignment="Center"
                             Style="{StaticResource SettingItemButtonContentStyle}"
-                            Text="Today highlight" />
+                            Text="Compact mode" />
                         <ToggleSwitch
                             Grid.Column="1"
-                            IsOn="{Binding Source={StaticResource AppSettings}, Path=EnableTodayRecommendation, Mode=TwoWay}"
+                            Toggled="ToggleSwitch_Toggled"
+                            x:Name="CompactModeSwitch"
+                            IsOn="{Binding Source={StaticResource AppSettings}, Path=EnableCompactMode, Mode=TwoWay}"
                             Style="{StaticResource ToggleSwitchStyle}" />
+                    </Grid>
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition/>
+                            <ColumnDefinition/>
+                        </Grid.ColumnDefinitions>
+                        <Grid Margin="8" Background="Black">
+                            <Image
+                                Tapped="CompactModeOffHintImage_Tapped"
+                                x:Name="CompactModeOffHintImage"
+                                Source="ms-appx:///Assets/Image/CompactModeOff.png"/>
+                        </Grid>
+                        <Grid Margin="8" Grid.Column="1" Background="Black">
+                            <Image
+                                Tapped="CompactModeOnHintImage_Tapped"
+                                x:Name="CompactModeOnHintImage"
+                                Source="ms-appx:///Assets/Image/CompactModeOn.png" />
+                        </Grid>
                     </Grid>
                     <Button
                         Margin="12"
