--- a/MyerSplash/View/Uc/TipsControl.xaml
+++ b/MyerSplash/View/Uc/TipsControl.xaml
@@ -3,16 +3,19 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:cu="http://schemas.microsoft.com/winfx/2006/xaml/presentation?IsApiContractNotPresent(Windows.Foundation.UniversalApiContract,5)"
+    xmlns:fcu="http://schemas.microsoft.com/winfx/2006/xaml/presentation?IsApiContractPresent(Windows.Foundation.UniversalApiContract,5)"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     Width="440"
-    Height="400"
-    d:DesignHeight="300"
+    Height="260"
+    d:DesignHeight="320"
     d:DesignWidth="600"
     mc:Ignorable="d">
-    <Grid Background="{StaticResource MaskColorBrush}">
+    <Grid 
+        cu:Background="{StaticResource AppBackgroundBrushDark}"
+        fcu:Background="{StaticResource CustomAcrylicInAppBrush}">
         <Grid.RowDefinitions>
             <RowDefinition Height="60" />
-            <RowDefinition Height="50" />
             <RowDefinition />
         </Grid.RowDefinitions>
         <Grid>
@@ -41,27 +44,27 @@
                     FontWeight="Bold"
                     Foreground="{StaticResource MyerSplashThemeColorBrush}"
                     Style="{StaticResource SubTitleTextBlockStyle}"
-                    Text="⚡ WHAT'S NEW" />
+                    Text="⚡ INTRODUCING COMPACT MODE" />
             </StackPanel>
         </Grid>
-        <StackPanel Grid.Row="1" Orientation="Horizontal">
-            <TextBlock
-                Margin="16,0,0,0"
-                HorizontalAlignment="Left"
-                VerticalAlignment="Center"
-                Foreground="White"
-                Text="Introducing Telegram Bot @MyerSplashBot." />
-            <Button
-                x:Name="LaunchBotButton"
-                Click="LaunchBotButton_Click"
-                Style="{StaticResource ListButtonStyle}" Margin="12,0,0,0">
-                <Border>
-                    <TextBlock Margin="8" Text="LAUNCH" FontWeight="Bold" Foreground="{StaticResource MyerSplashThemeColorBrush}" />
-                </Border>
-            </Button>
+        <StackPanel Grid.Row="1" VerticalAlignment="Center" Margin="12,0,12,0">
+            <TextBlock Margin="8,0,0,0"
+                       VerticalAlignment="Center"
+                       Style="{StaticResource SettingItemButtonContentStyle}"
+                       Text="Select your favorite layout in settings." />
+            <Grid Margin="0,12,0,0">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                </Grid.ColumnDefinitions>
+                <Image Margin="8"
+                       x:Name="CompactModeOffHintImage"
+                       Source="ms-appx:///Assets/Image/CompactModeOff.png"/>
+                <Image Margin="8"
+                       Grid.Column="1"
+                       x:Name="CompactModeOnHintImage"
+                       Source="ms-appx:///Assets/Image/CompactModeOn.png" />
+            </Grid>
         </StackPanel>
-        <Grid Grid.Row="2">
-            <Image Margin="12" Source="ms-appx:///Assets/Image/coach.jpg" Stretch="UniformToFill" />
-        </Grid>
     </Grid>
 </UserControl>
