--- a/MyerSplash/View/Page/MainPage.xaml
+++ b/MyerSplash/View/Page/MainPage.xaml
@@ -62,9 +62,13 @@
                 </Grid>
             </Button>
         </Grid>
-        <Grid x:Name="DummyTitleBar"
+        <Grid x:Name="TitleBarBackgroundPlaceholder"
               Background="{Binding Source={StaticResource AppSettings}, Path=MainTopNavigationBackgroundBrush, Mode=OneWay}"
               VerticalAlignment="Stretch"/>
+        <Grid x:Name="DummyTitleBar"
+              Background="Transparent"
+              Height="30"
+              VerticalAlignment="Top"/>
         <Grid x:Name="TitleGridContent"
               Padding="0,30,0,0">
             <cc:TopNavigationControl 
