--- a/MyerSplash/ResourceDictionary/BrushDictionary.xaml
+++ b/MyerSplash/ResourceDictionary/BrushDictionary.xaml
@@ -10,6 +10,12 @@
         FallbackColor="Black"
         TintColor="Black"
         TintOpacity="0.8" />
+    <fcu:AcrylicBrush
+        x:Key="CustomAcrylicInAppBrushTrans"
+        BackgroundSource="Backdrop"
+        FallbackColor="Black"
+        TintColor="Black"
+        TintOpacity="0.6" />
     <backdrop:AcrylicHostBrush
         x:Key="CustomAcrylicWindowBrush"
         BackdropFactor="0.2"
