--- a/MyerSplash/View/Page/MainPage.xaml
+++ b/MyerSplash/View/Page/MainPage.xaml
@@ -96,7 +96,7 @@
                     Width="{StaticResource MainButtonSize}"
                     Height="{StaticResource MainButtonSize}"
                     ToolTipService.ToolTip="Downloads"
-                    Margin="0"
+                    Margin="{StaticResource ButtonsStackMargin}"
                     Padding="0"
                     HorizontalAlignment="Left"
                     VerticalAlignment="Center"
@@ -116,7 +116,7 @@
                     ToolTipService.ToolTip="Search"
                     Width="{StaticResource MainButtonSize}"
                     Height="{StaticResource MainButtonSize}"
-                    Margin="0"
+                    Margin="{StaticResource ButtonsStackMargin}"
                     HorizontalAlignment="Left"
                     VerticalAlignment="Center"
                     fcu:Style="{StaticResource MainButtonStyle}"
@@ -138,7 +138,7 @@
                     Grid.Column="3"
                     Width="{StaticResource MainButtonSize}"
                     Height="{StaticResource MainButtonSize}"
-                    Margin="0"
+                    Margin="{StaticResource ButtonsStackMargin}"
                     ToolTipService.ToolTip="Settings"
                     HorizontalAlignment="Left"
                     VerticalAlignment="Center"
@@ -157,7 +157,7 @@
                     ToolTipService.ToolTip="About"
                     Width="{StaticResource MainButtonSize}"
                     Height="{StaticResource MainButtonSize}"
-                    Margin="0"
+                    Margin="{StaticResource ButtonsStackMargin}"
                     HorizontalAlignment="Left"
                     Click="MoreBtn_Click"
                     VerticalAlignment="Center"
