--- a/MyerSplash/View/Uc/NoNetworkControl.xaml
+++ b/MyerSplash/View/Uc/NoNetworkControl.xaml
@@ -2,7 +2,9 @@
     x:Class="MyerSplash.View.Uc.NoNetworkControl"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:cu="http://schemas.microsoft.com/winfx/2006/xaml/presentation?IsApiContractNotPresent(Windows.Foundation.UniversalApiContract,5)"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:fcu="http://schemas.microsoft.com/winfx/2006/xaml/presentation?IsApiContractPresent(Windows.Foundation.UniversalApiContract,5)"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     d:DesignHeight="300"
     d:DesignWidth="400"
@@ -22,6 +24,20 @@
             FontSize="20"
             FontWeight="Light"
             Foreground="{StaticResource HintTextForegroundBrush}"
-            Text="Can't connect to server" />
+            Text="Something happened" />
+        <Button
+            Margin="0,12"
+            HorizontalAlignment="Stretch"
+            x:Name="DiagnoseButton"
+            Click="DiagnoseButton_Click"
+            fcu:Style="{StaticResource MainButtonStyle}"
+            Background="{StaticResource SettingsButtonBackgroundBrush}"
+            HorizontalContentAlignment="Center"
+            cu:Style="{StaticResource MainButtonCompatStyle}">
+            <TextBlock
+                  Foreground="White"
+                  Style="{StaticResource SettingItemButtonContentStyle}"
+                  Text="Diagnose Network" />
+        </Button>
     </StackPanel>
 </UserControl>
