--- a/MyerSplash/View/Uc/NetworkDiagnosisDialog.xaml
+++ b/MyerSplash/View/Uc/NetworkDiagnosisDialog.xaml
@@ -2,7 +2,6 @@
     x:Class="MyerSplash.View.Uc.NetworkDiagnosisDialog"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:MyerSplash.View.Uc"
     xmlns:cu="http://schemas.microsoft.com/winfx/2006/xaml/presentation?IsApiContractNotPresent(Windows.Foundation.UniversalApiContract,5)"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:fcu="http://schemas.microsoft.com/winfx/2006/xaml/presentation?IsApiContractPresent(Windows.Foundation.UniversalApiContract,5)"
@@ -23,7 +22,7 @@
                 FontSize="20"
                 FontWeight="Bold"
                 Foreground="{StaticResource MyerSplashThemeColorBrush}"
-                Text="DIAGNOSE NETWORK" />
+                Text="NETWORK DIAGNOSIS" />
                 <ProgressRing x:Name="ProgressRing" 
                               Margin="12,12,0,0"
                               Foreground="{StaticResource MyerSplashThemeColorBrush}"
