--- a/MyerSplash/View/Page/MainPage.xaml
+++ b/MyerSplash/View/Page/MainPage.xaml
@@ -183,6 +183,7 @@
             x:Name="DetailControl"
             Grid.RowSpan="2"
             d:IsHidden="True"
+            BeginSearchByKeyword="DetailControl_BeginSearchByKeyword"
             Visibility="Collapsed" />
         <uc:SearchBarControl
             x:Name="SearchControl"
